--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "ts-jest": "^24.0.2"
   },
   "scripts": {
-    "test": "jest"
-
+    "test": "jest",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w"
   },
   "jest": {
     "globals": {
