--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "prettier": "^1.17.1",
+    "tslint": "^5.16.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^3.4.5"
   },
   "dependencies": {
@@ -14,6 +18,7 @@
   },
   "scripts": {
     "test": "jest",
+    "lint": "tslint 'src/**/*.{ts,tsx}'",
     "build-ts": "tsc",
     "watch-ts": "tsc -w"
   },
