--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "jest",
-    "lint": "tslint 'src/**/*.{ts,tsx}'",
+    "lint": "tslint --project .",
     "build-ts": "tsc",
     "watch-ts": "tsc -w"
   },
